@@ -175,13 +175,6 @@ namespace QuantLib {
         };
 
         explicit UnitedStates(Market market);
-
-        /*! \deprecated Use the other constructor.
-                        Deprecated in version 1.24.
-        */
-        QL_DEPRECATED
-        UnitedStates()
-        : UnitedStates(Settlement) {}
     };
 
 }
